ensure desktop nav is open when no jump links are present

--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -131,6 +131,39 @@
       }
     }
   }
+
+  .mobileMenuLabel {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    position: relative;
+    top: -0.25rem;
+
+    svg {
+      height: 1.25rem;
+      width: 1.25rem;
+    }
+    @media (min-width: $breakpoint-tablet) {
+      display: none !important;
+    }
+  }
+  .desktopMenuLabel {
+    display: none;
+    @media (min-width: $breakpoint-tablet) {
+      display: block;
+    }
+  }
+
+  &:global(.noJumpTo) {
+    .mobileMenuLabel {
+      display: flex;
+    }
+    .desktopMenuLabel {
+      @media (min-width: $breakpoint-tablet) {
+        display: none;
+      }
+    }
+  }
 }
 
 .jumpto {
@@ -205,28 +238,6 @@
       -webkit-text-stroke-width: 0.05px;
       max-height: none;
     }
-  }
-}
-
-.mobileMenuLabel {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  position: relative;
-  top: -0.25rem;
-
-  svg {
-    height: 1.25rem;
-    width: 1.25rem;
-  }
-  @media (min-width: $breakpoint-tablet) {
-    display: none;
-  }
-}
-.desktopMenuLabel {
-  display: none;
-  @media (min-width: $breakpoint-tablet) {
-    display: block;
   }
 }
 
